--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
           name: Runs unit tests
           command: |
             bundle exec rspec \
-              --format RSpecJunitFormatter \
+              --format RspecJunitFormatter \
               --out /tmp/results/rspec/results.xml \
               --format html \
               --out /tmp/results/rspec/results.html \
