--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -156,6 +156,8 @@ workflows:
       - rubocop
       - documentation
       - docker:
+          context:
+            - virtuatable
           requires:
             - rspec
             - rubocop
