--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
   ruby:
     docker:
       - image: cimg/ruby:2.7.1
-    working_directory: /ctx
+    working_directory: /tmp
 
 commands:
   # This command sets up the important bits of the ruby environment
@@ -107,7 +107,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: /ctx/workspace
+          at: /tmp/workspace
       - run:
           name: Export the version in the environment
           command: echo 'export NEXT_VERSION=`ruby .circleci/bump_version.rb`' >> $BASH_ENV
@@ -132,7 +132,7 @@ jobs:
       - kube/install-kubectl
       - checkout
       - attach_workspace:
-          at: /ctx/workspace
+          at: /tmp/workspace
       - run:
           name: Export the version in the environment
           command: echo 'export NEXT_VERSION=`ruby .circleci/bump_version.rb`' >> $BASH_ENV
