--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ executors:
   ruby:
     docker:
       - image: cimg/ruby:2.7.1
+    working_directory: /tmp
 
 commands:
   # This command sets up the important bits of the ruby environment
