--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -160,6 +160,8 @@ workflows:
             branches:
               only: master
       - deployment:
+          context:
+            - virtuatable
           requires:
             - docker
           filters:
