--- a/kube/ingress.yml
+++ b/kube/ingress.yml
@@ -6,6 +6,7 @@ metadata:
     app: "conversations"
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /$2
+  namespace: api
 spec:
   rules:
   - http:
