--- a/kube/service.yml
+++ b/kube/service.yml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: "conversations-service"
+  namespace: api
 spec:
   selector:
     app: "conversations"
