Fix the bundle config set commands

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ commands:
           command: gem install bundler --no-document
       - run:
           name: Configuration bundler and install dependencies
-          command: bundle set config with test && bundle install
+          command: bundle config set with test && bundle install
   # This command sets up the environment for déployment purpose, it
   # mainly install dependencies used by the .circleci/script/version script
   setup_environment_for_deployment:
@@ -31,7 +31,7 @@ commands:
           command: gem install bundler --no-document
       - run:
           name: Configuration bundler and install dependencies
-          command: bundle set config with deployment && bundle install
+          command: bundle config set with deployment && bundle install
 
 jobs:
   # This job runs the unit tests and stores the results in
