Change the bundler commands to have more traces of what's installed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,10 @@ commands:
           command: gem install bundler --no-document
       - run:
           name: Configuration bundler and install dependencies
-          command: bundle config set with test && bundle install
+          command: |
+            bundle config set --local with test && \
+            bundle config get with && \
+            bundle install
   # This command sets up the environment for déployment purpose, it
   # mainly install dependencies used by the .circleci/script/version script
   setup_environment_for_deployment:
@@ -31,7 +34,10 @@ commands:
           command: gem install bundler --no-document
       - run:
           name: Configuration bundler and install dependencies
-          command: bundle config set with deployment && bundle install
+          command: |
+            bundle config set --local with deployment && \
+            bundle config get with && \
+            bundle install
 
 jobs:
   # This job runs the unit tests and stores the results in
