--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@ stages:
   - checks
 
 variables:
-  NEXT_VERSION: ruby ~/conversations/.circleci/scripts/version.rb next
+  NEXT_VERSION: /bin/bash -l -c "ruby ~/conversations/.circleci/scripts/version.rb next"
 
 default:
   image: virtuatable/mongo-ruby-ci:1.0.1
