--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,4 +33,13 @@ rubocop:
 docker:
   stage: checks
   script:
+    # Logs in into docker, don't forget to create the environment variables on Gitlab
     - echo $DOCKER_PWD | docker login --username $DOCKER_USER --password-stdin
+    # Stores the next version in an environment variable to access it easily
+    - echo 'export NEXT_VERSION=`cat ./NEXT_VERSION`'
+    # Builds the image for the service.
+    - docker build \
+        --tag virtuatable/conversations:${NEXT_VERSION} \
+        --file Dockerfile .
+    # Pushes the image to Docker HUB
+    docker push virtuatable/conversations:${NEXT_VERSION}
