Add the forgotten list item indicator in YAML file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,4 +42,4 @@ docker:
         --tag virtuatable/conversations:${NEXT_VERSION} \
         --file Dockerfile .
     # Pushes the image to Docker HUB
-    docker push virtuatable/conversations:${NEXT_VERSION}
+    - docker push virtuatable/conversations:${NEXT_VERSION}
