--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - checks
+  - image creation
 
 default:
   before_script:
@@ -11,6 +12,8 @@ default:
     - bundle install
     # Stores the next version in a corresponding file
     - bundle exec ruby ./scripts/version.rb next > ./NEXT_VERSION
+    # Stores the current version for Kubernetes purpose
+    - bundle exec ruby ./scripts/version.rb current > ./VERSION
 
 # Executes the RSpec tests.
 # TODO : store the results in an artefact.
@@ -19,14 +22,22 @@ rspec:
   script:
     - bundle exec rspec
 
-
+# Checks the aesthetic of the code against Rubocop standards.
+# TODO : store the results in an artefact
 rubocop:
   stage: checks
   script:
     - bundle exec rubocop
 
-docker:
+documentation:
   stage: checks
+  rules:
+     - allow_failure: true
+  script:
+    - bundle exec yard doc controllers/ decorators/ services/
+
+docker:
+  stage: image creation
   script:
     # Logs in into docker, don't forget to create the environment variables on Gitlab
     - echo $DOCKER_PWD | docker login --username $DOCKER_USER --password-stdin
