--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,6 @@
+include:
+  - template: 'Workflows/MergeRequest-Pipelines.gitlab-ci.yml'
+
 stages:
   - checks
   - image creation
@@ -55,3 +58,5 @@ docker:
     - docker build -t virtuatable/conversations:${NEXT_VERSION} .
     # Pushes the image to Docker HUB
     - docker push virtuatable/conversations:${NEXT_VERSION}
+  only:
+    - master
